components/ads_8.1/ace.hpp

//-- type declarations -------------------------------------------------------
typedef char *PAceChar;
typedef char *PAceBinary;
typedef int ADSHANDLE;
typedef int ADSIndexArray[50];
typedef ADSIndexArray *PADSIndexArray;
typedef int *PADSHANDLE;
typedef double *PDOUBLE;
typedef Word *PWord;
typedef Word UNSIGNED16;
typedef int *PSIGNED32;
typedef unsigned UNSIGNED32;
typedef unsigned *PUNSIGNED32;
extern "C" unsigned __stdcall AdsCopyTable(int hObj, Word usFilterOption, char * pucFile);
extern "C" unsigned __stdcall AdsCopyTableContents(int hObjFrom, int hTableTo, Word usFilterOption);
extern "C" unsigned __stdcall AdsCopyTableStructure(int hTable, char * pucFile);
extern "C" unsigned __stdcall AdsCreateIndex(int hObj, char * pucFileName, char * pucTag, char * pucExpr, char * pucCondition, char * pucWhile, unsigned ulOptions, PADSHANDLE phIndex);
extern "C" unsigned __stdcall AdsCreateIndex61(int hObj, char * pucFileName, char * pucTag, char * pucExpr, char * pucCondition, char * pucWhile, unsigned ulOptions, unsigned ulPageSize, PADSHANDLE phIndex);
extern "C" unsigned __stdcall AdsCreateFTSIndex(int hTable, char * pucFileName, char * pucTag, char * pucField, unsigned ulPageSize, unsigned ulMinWordLen, unsigned ulMaxWordLen, Word bUseDefaultDelim, char * pucDelimiters, Word bUseDefaultNoise, char * pucNoiseWords, Word bUseDefaultDrop, char * pucDropChars, Word bUseDefaultConditionals, char * pucConditionalChars, char * pucReserved1, char * pucReserved2, unsigned ulOptions);
extern "C" unsigned __stdcall AdsCreateTable(int hConnection, char * pucName, char * pucAlias, Word usTableType, Word usCharType, Word usLockType, Word usCheckRights, Word usMemoSize, char * pucFields, PADSHANDLE phTable);
extern "C" unsigned __stdcall AdsCreateTable71(int hConnection, char * pucName, char * pucDBObjName, Word usTableType, Word usCharType, Word usLockType, Word usCheckRights, Word usMemoSize, char * pucFields, unsigned ulOptions, PADSHANDLE phTable);
extern "C" unsigned __stdcall AdsDecryptRecord(int hTable);
extern "C" unsigned __stdcall AdsDecryptTable(int hTable);
extern "C" unsigned __stdcall AdsDeleteCustomKey(int hIndex);
extern "C" unsigned __stdcall AdsDeleteIndex(int hIndex);
extern "C" unsigned __stdcall AdsDeleteRecord(int hTable);
extern "C" unsigned __stdcall AdsDisableEncryption(int hTable);
extern "C" unsigned __stdcall AdsDisconnect(int hConnect);
extern "C" unsigned __stdcall AdsEnableEncryption(int hTable, char * pucPassword);
extern "C" unsigned __stdcall AdsEncryptRecord(int hTable);
extern "C" unsigned __stdcall AdsEncryptTable(int hTable);
extern "C" unsigned __stdcall AdsEvalLogicalExpr(int hIndex, char * pucExpr, PWord pbResult);
extern "C" unsigned __stdcall AdsEvalNumericExpr(int hIndex, char * pucExpr, PDOUBLE pdResult);
extern "C" unsigned __stdcall AdsEvalStringExpr(int hIndex, char * pucExpr, char * pucResult, PWord pusLen);
extern "C" unsigned __stdcall AdsEvalTestExpr(int hIndex, char * pucExpr, PWord pusType);
extern "C" unsigned __stdcall AdsExtractKey(int hIndex, char * pucKey, PWord pusLen);
extern "C" unsigned __stdcall AdsFailedTransactionRecovery(char * pucServer);
extern "C" unsigned __stdcall AdsFileToBinary(int hTable, char * pucFldName, Word usBinaryType, char * pucFileName);
extern "C" unsigned __stdcall AdsFindConnection(char * pucServerName, PADSHANDLE phConnect);
extern "C" unsigned __stdcall AdsFindConnection25(char * pucFullPath, PADSHANDLE phConnect);
extern "C" unsigned __stdcall AdsGetAllIndexes(int hTable, PADSIndexArray ahIndex, PWord pusArrayLen);
extern "C" unsigned __stdcall AdsGetFTSIndexes(int hTable, PADSIndexArray ahIndex, PWord pusArrayLen);
extern "C" unsigned __stdcall AdsGetAllLocks(int hTable, void * aulLocks, PWord pusArrayLen);
extern "C" unsigned __stdcall AdsGetAllTables(void * ahTable, PWord pusArrayLen);
extern "C" unsigned __stdcall AdsGetBinary(int hTable, char * pucFldName, unsigned ulOffset, char * pucBuf, PUNSIGNED32 pulLen);
extern "C" unsigned __stdcall AdsGetBinaryLength(int hTable, char * pucFldName, PUNSIGNED32 pulLength);
extern "C" unsigned __stdcall AdsGetBookmark(int hTable, PADSHANDLE phBookmark);
extern "C" unsigned __stdcall AdsGetBookmark60(int hObj, char * pucBookmark, PUNSIGNED32 pulLength);
extern "C" unsigned __stdcall AdsGetBookmarkLength(int hObj, PUNSIGNED32 pulLength);
extern "C" unsigned __stdcall AdsCompareBookmarks(char * pucBookmark1, char * pucBookmark2, PSIGNED32 plResult);
extern "C" unsigned __stdcall AdsGetCollationLang(char * pucLang, PWord pusLen);
extern "C" unsigned __stdcall AdsGetConnectionType(int hConnect, PWord pusConnectType);
extern "C" unsigned __stdcall AdsGetConnectionPath(int hConnect, char * pucConnectionPath, PWord pusLen);
extern "C" unsigned __stdcall AdsGetConnectionProperty(int hConnect, Word usPropertyID, void * pvProperty, PUNSIGNED32 pulPropertyLen);
extern "C" unsigned __stdcall AdsGetDate(int hTable, char * pucFldName, char * pucBuf, PWord pusLen);
extern "C" unsigned __stdcall AdsGetDateFormat(char * pucFormat, PWord pusLen);
extern "C" unsigned __stdcall AdsGetDateFormat60(int hConnect, char * pucFormat, PWord pusLen);
extern "C" unsigned __stdcall AdsGetDecimals(PWord pusDecimals);
extern "C" unsigned __stdcall AdsGetDefault(char * pucDefault, PWord pusLen);
extern "C" unsigned __stdcall AdsGetDeleted(PWord pbUseDeleted);
extern "C" unsigned __stdcall AdsGetDouble(int hTable, char * pucFldName, PDOUBLE pdValue);
extern "C" unsigned __stdcall AdsGetEpoch(PWord pusCentury);
extern "C" unsigned __stdcall AdsGetErrorString(unsigned ulErrCode, char * pucBuf, PWord pusBufLen);
extern "C" unsigned __stdcall AdsGetExact(PWord pbExact);