components/ads_8.1/ace.pas


   function AdsCopyTable( hObj: ADSHANDLE;
                          usFilterOption: Word;
                          pucFile: PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCopyTableContents( hObjFrom: ADSHANDLE;
                                  hTableTo: ADSHANDLE;
                                  usFilterOption: Word ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCopyTableStructure( hTable: ADSHANDLE;
                                   pucFile: PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCreateIndex( hObj: ADSHANDLE;
                            pucFileName: PAceChar;
                            pucTag: PAceChar;
                            pucExpr: PAceChar;
                            pucCondition: PAceChar;
                            pucWhile: PAceChar;
                            ulOptions: UNSIGNED32;
                            phIndex: pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCreateIndex61( hObj: ADSHANDLE;
                              pucFileName: PAceChar;
                              pucTag: PAceChar;
                              pucExpr: PAceChar;
                              pucCondition: PAceChar;
                              pucWhile: PAceChar;
                              ulOptions: UNSIGNED32;
                              ulPageSize: UNSIGNED32;
                              phIndex: pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCreateFTSIndex( hTable: ADSHANDLE;
                               pucFileName: PAceChar;
                               pucTag: PAceChar;
                               pucField: PAceChar;
                               ulPageSize: UNSIGNED32;
                               ulMinWordLen: UNSIGNED32;
                               ulMaxWordLen: UNSIGNED32;
                               bUseDefaultDelim: Word;
                               pucDelimiters: PAceChar;
                               bUseDefaultNoise: Word;
                               pucNoiseWords: PAceChar;
                               bUseDefaultDrop: Word;
                               pucDropChars: PAceChar;
                               bUseDefaultConditionals: Word;
                               pucConditionalChars: PAceChar;
                               pucReserved1: PAceChar;
                               pucReserved2: PAceChar;
                               ulOptions: UNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCreateTable( hConnection : ADSHANDLE;
                            pucName: PAceChar;
                            pucAlias: PAceChar;
                            usTableType: Word;
                            usCharType: Word;
                            usLockType: Word;
                            usCheckRights: Word;
                            usMemoSize: Word;
                            pucFields: PAceChar;
                            phTable: pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCreateTable71( hConnection : ADSHANDLE;
                              pucName: PAceChar;
                              pucDBObjName: PAceChar;
                              usTableType: Word;
                              usCharType: Word;
                              usLockType: Word;
                              usCheckRights: Word;
                              usMemoSize: Word;
                              pucFields: PAceChar;
                              ulOptions: UNSIGNED32;
                              phTable: pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDecryptRecord( hTable:ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDecryptTable( hTable:ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDeleteCustomKey( hIndex: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDeleteIndex( hIndex: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDeleteRecord( hTable: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDisableEncryption( hTable: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDisconnect( hConnect: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsEnableEncryption( hTable: ADSHANDLE;
                                 pucPassword: PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsEncryptRecord( hTable: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsEncryptTable( hTable: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsEvalLogicalExpr( hIndex: ADSHANDLE;
                                pucExpr: PAceChar;
                                pbResult: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsEvalNumericExpr( hIndex: ADSHANDLE;
                                pucExpr: PAceChar;
                                pdResult: pDOUBLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsEvalStringExpr( hIndex: ADSHANDLE;
                               pucExpr: PAceChar;
                               pucResult: PAceChar;
                               pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsEvalTestExpr( hIndex: ADSHANDLE;
                             pucExpr: PAceChar;
                             pusType: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsExtractKey( hIndex: ADSHANDLE;
                           pucKey: PAceChar;
                           pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsFailedTransactionRecovery( pucServer: PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsFileToBinary( hTable: ADSHANDLE;
                             pucFldName: PAceChar;
                             usBinaryType: Word;
                             pucFileName:  PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsFindConnection( pucServerName: PAceChar;
                               phConnect: pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsFindConnection25( pucFullPath: PAceChar;
                                 phConnect: pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetAllIndexes( hTable: ADSHANDLE;
                              ahIndex: PADSIndexArray;
                              pusArrayLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetFTSIndexes( hTable: ADSHANDLE;
                              ahIndex: PADSIndexArray;
                              pusArrayLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetAllLocks( hTable: ADSHANDLE;
                            aulLocks: pointer;
                            pusArrayLen:pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetAllTables( ahTable: pointer;
                             pusArrayLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}


   function AdsGetBinary( hTable: ADSHANDLE;
                          pucFldName: PAceChar;
                          ulOffset: UNSIGNED32;
                          pucBuf: PAceBinary;
                          pulLen: pUNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetBinaryLength( hTable: ADSHANDLE;
                                pucFldName: PAceChar;
                                pulLength: pUNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetBookmark( hTable: ADSHANDLE;
                            phBookmark: pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetBookmark60( hObj        : ADSHANDLE;
                              pucBookmark : PAceChar;
                              pulLength   : pUNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetBookmarkLength( hObj      : ADSHANDLE;
                                  pulLength : pUNSIGNED32 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCompareBookmarks( pucBookmark1 : PAceChar;
                                 pucBookmark2 : PAceChar;
                                 plResult     : pSIGNED32 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetCollationLang( pucLang: PAceChar;
                                 pusLen:pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetConnectionType( hConnect: ADSHANDLE;
                                  pusConnectType: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetConnectionPath( hConnect: ADSHANDLE;
                                  pucConnectionPath: PAceChar;
                                  pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetConnectionProperty( hConnect: ADSHANDLE;
                                      usPropertyID: UNSIGNED16;
                                      pvProperty: pointer;
                                      pulPropertyLen: PUNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetDate( hTable: ADSHANDLE;
                        pucFldName: PAceChar;
                        pucBuf: PAceChar;
                        pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetDateFormat( pucFormat: PAceChar;
                              pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetDateFormat60( hConnect: ADSHANDLE;
                                pucFormat: PAceChar;
                                pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetDecimals( pusDecimals: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetDefault( pucDefault: PAceChar;
                           pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetDeleted( pbUseDeleted: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetDouble( hTable: ADSHANDLE;
                          pucFldName: PAceChar;
                          pdValue: pDOUBLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetEpoch( pusCentury: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetErrorString( ulErrCode: UNSIGNED32;
                               pucBuf: PAceChar;
                               pusBufLen: pWord): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetExact( pbExact: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
